fix white space around page

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 
 }
 
+body {
+    margin: 0px;
+}
+
 .header {
     display: flex;
     align-items: center;
